objects/DNC_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>AccountDNC__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DNC Preferences</relationshipLabel>
        <relationshipName>DNC_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment_Count__c</fullName>
        <label>Attachment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNC Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNC_Reason__c</fullName>
        <label>DNC Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Preference</fullName>
                </value>
                <value>
                    <fullName>Employer Preference</fullName>
                </value>
                <value>
                    <fullName>Broker Preference</fullName>
                </value>
                <value>
                    <fullName>Sales Preference</fullName>
                </value>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>Review Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <label>DNC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Member Marketing</fullName>
                </value>
                <value>
                    <fullName>Member Clinical</fullName>
                </value>
                <value>
                    <fullName>Pharmacy - Cost of Care</fullName>
                </value>
                <value>
                    <fullName>Pharmacy - Quality of Care</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Preference_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Preference Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                    <default>true</default>
                    <label>Account Manager</label>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Pending Submission - Need Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DNC Preferences</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>DNC Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DNC Preferences</pluralLabel>
    <recordTypes>
        <fullName>DNC_Contractual</fullName>
        <active>true</active>
        <label>DNC Contractual</label>
    </recordTypes>
    <recordTypes>
        <fullName>DNC_Standard</fullName>
        <active>true</active>
        <label>DNC Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>